--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,15 @@ dist.jar=${dist.dir}/Qweez.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.gson-2.4.jar=dist/lib/gson-2.4.jar
+file.reference.json-simple-1.1.1.jar=dist/lib/json-simple-1.1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.gson-2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
